--- a/getWorkDone2/app/src/main/res/values/colors.xml
+++ b/getWorkDone2/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="colorWhite">#ffffff</color>
+    <color name="colorTransparentWhite">#cccccc</color>
+    <color name="colorLightBlue">#456aa6</color>
+    <color name="Transparent">#00000000</color>
 </resources>
