--- a/getWorkDone2/app/src/main/res/layout/activity_login.xml
+++ b/getWorkDone2/app/src/main/res/layout/activity_login.xml
@@ -40,12 +40,13 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="44dp"
+        android:enabled="false"
         android:text="signOut"
         android:visibility="invisible"
-        android:enabled="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />
 
