--- a/getWorkDone2/app/src/main/res/values/colors.xml
+++ b/getWorkDone2/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="colorTransparentWhite">#cccccc</color>
     <color name="colorLightBlue">#456aa6</color>
     <color name="Transparent">#00000000</color>
+    <color name="whiteTransparent">#aaaaaa</color>
 </resources>
