--- a/getWorkDone2/app/src/main/res/layout/activity_slider.xml
+++ b/getWorkDone2/app/src/main/res/layout/activity_slider.xml
@@ -7,7 +7,7 @@
     android:layout_margin="0dp"
     tools:context=".SliderActivity">
 
-    <android.support.v4.view.ViewPager
+    <androidx.viewpager.widget.ViewPager
         android:id="@+id/slideViewPage"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -21,7 +21,7 @@
         android:layout_marginTop="0dp"
         android:layout_marginEnd="0dp"
         android:layout_marginRight="0dp"
-        android:layout_marginBottom="0dp"></android.support.v4.view.ViewPager>
+        android:layout_marginBottom="0dp"></androidx.viewpager.widget.ViewPager>
 
     <LinearLayout
         android:id="@+id/dotsLayout"
