--- a/getWorkDone2/app/src/main/res/values/colors.xml
+++ b/getWorkDone2/app/src/main/res/values/colors.xml
@@ -7,5 +7,8 @@
     <color name="colorTransparentWhite">#cccccc</color>
     <color name="colorLightBlue">#456aa6</color>
     <color name="Transparent">#00000000</color>
-    <color name="whiteTransparent">#aaaaaa</color>
+    <color name="green">#57A500</color>
+    <color name="whiteTransparent">#D6D6D6</color>
+    <color name="gery">#E2E2E2</color>
+    <color name="black">#000000</color>
 </resources>
