Added on click listener to Recycler view

--- a/getWorkDone2/app/src/main/res/layout/model.xml
+++ b/getWorkDone2/app/src/main/res/layout/model.xml
@@ -142,13 +142,13 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/green"
                 android:text="₹"
                 android:textSize="15dp"/>
 
             <TextView
                 android:id="@+id/pay"
                 android:textSize="15sp"
-                android:paddingLeft="6dp"
                 style="@style/Base.TextAppearance.AppCompat.Body1"
                 android:layout_below="@id/deadline"
                 android:textColor="@color/green"
