Added Upload fragment to upload any work you want to delegate

--- a/getWorkDone2/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/getWorkDone2/app/src/main/res/menu/bottom_nav_menu.xml
@@ -6,6 +6,10 @@
         android:icon="@drawable/ic_home_black_24dp"
         android:title="@string/Home" />
     <item
+        android:id="@+id/upload"
+        android:icon="@drawable/ic_cloud_upload_black_24dp"
+        android:title="@string/upload" />
+    <item
         android:id="@+id/notification"
         android:icon="@drawable/ic_notifications_black_24dp"
         android:title="@string/Notifications" />
